--- a/src/main/resources/templates/liste_emp.html
+++ b/src/main/resources/templates/liste_emp.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Liste des Employés</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
 
 
 </head>
